<resources>
    <string name="app_name">HaltecReport</string>
    <string name="title">Haltec Report</string>
    <string name="previous">Previous Reports</string>
    <string name="newReport">New Report</string>
    <string name="settings">Settings</string>
    <string name="location">Store Location</string>
    <string name="version">Version 1.0.0</string>
    <string name="rights">Haltec Corporation © 2020</string>
    <string name="finish">Finish Report</string>
    <string name="w250">Adjustable 250 lbft</string>
    <string name="w80">Preset 80 lbft</string>
    <string name="w100">Preset 100 lbft</string>
    <string name="w140">Preset 140 lbft</string>
    <string name="wrench">Wrench</string>
    <string name="wrench1">Wrench 1</string>
    <string name="wrench2">Wrench 2</string>
    <string name="readings">Readings:</string>
    <string name="serial">Serial #:</string>
    <string name="tolerance">Within +/-4%</string>
    <string name="repairs">Additional Repairs?</string>
    <string name="reports">Reports</string>
</resources>