<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:alpha="0.7"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/brushedmetal103" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:autoText="true"
        android:fontFamily="@font/autour_one"
        android:text="@string/title"
        android:textColor="@color/black"
        android:textSize="48sp"
        android:textStyle="bold"
        app:autoSizeMaxTextSize="48sp"
        app:autoSizeMinTextSize="12sp"
        app:autoSizeStepGranularity="2sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/previousReportsButton"
        android:layout_width="wrap_content"
        android:layout_height="125dp"
        android:fontFamily="@font/fredoka_one"
        android:text="@string/previous"
        android:textColor="#000000"
        android:textSize="18sp"
        app:backgroundTint="@color/orange"
        app:cornerRadius="25dp"
        app:iconPadding="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView2" />

    <Button
        android:id="@+id/settingsButton"
        android:layout_width="0dp"
        android:layout_height="125dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/fredoka_one"
        android:text="@string/settings"
        android:textColor="#000000"
        android:textSize="18sp"
        app:backgroundTint="@color/gray"
        app:cornerRadius="25dp"
        app:iconPadding="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/previousReportsButton"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@+id/previousReportsButton"
        app:layout_constraintTop_toBottomOf="@+id/previousReportsButton"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/newReportButton"
        android:layout_width="0dp"
        android:layout_height="125dp"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/fredoka_one"
        android:text="@string/newReport"
        android:textColor="#000000"
        android:textSize="18sp"
        app:backgroundTint="@color/green"
        app:cornerRadius="25dp"
        app:iconPadding="8dp"
        app:layout_constraintBottom_toTopOf="@+id/previousReportsButton"
        app:layout_constraintEnd_toEndOf="@+id/previousReportsButton"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="@+id/previousReportsButton"
        app:layout_constraintTop_toTopOf="@+id/imageView2"
        app:layout_constraintVertical_bias="1.0" />
</androidx.constraintlayout.widget.ConstraintLayout>